--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=forohub
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url =jdbc:mysql://localhost:3306/forohub
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.data.web.pageable.size-parameter=limit
+
