--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.data.web.pageable.size-parameter=limit
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 
